--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/marcosalvalaggio-bip/test-cython-prines"
+"Bug Tracker" = "https://github.com/marcosalvalaggio-bip/test-cython-prines/issues"
